--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Cantor</title>
 </head>
 <body>
-  <h1>Hallo 👋</h1>
+  <h1>Hallio 👋</h1>
   <p>GitHub Pages funktioniert jetzt.</p>
 </body>
 </html>
